fixed text align

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,7 +1,6 @@
 .button-style {
       width: 50%;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
       padding: .5rem .8rem;
       text-align: center;
       vertical-align: middle;
